--- a/materials/SMOTE.ipynb
+++ b/materials/SMOTE.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "49ace0b8",
    "metadata": {},
    "outputs": [
@@ -37,6 +37,17 @@
       "(11000, 2)\n",
       "(11000,)\n",
       "110\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Counter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/c/Users/12750/OneDrive/Documents/MyOversea/Cass Study/applied deep learning/MTP/applied-deep-learning/materials/SMOTE.ipynb Cell 3'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/12750/OneDrive/Documents/MyOversea/Cass%20Study/applied%20deep%20learning/MTP/applied-deep-learning/materials/SMOTE.ipynb#ch0000002vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(y\u001b[39m.\u001b[39mshape)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/12750/OneDrive/Documents/MyOversea/Cass%20Study/applied%20deep%20learning/MTP/applied-deep-learning/materials/SMOTE.ipynb#ch0000002vscode-remote?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39msum(y))\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/12750/OneDrive/Documents/MyOversea/Cass%20Study/applied%20deep%20learning/MTP/applied-deep-learning/materials/SMOTE.ipynb#ch0000002vscode-remote?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(Counter(y))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Counter' is not defined"
      ]
     }
    ],
@@ -108,6 +119,16 @@
     "scaler = MinMaxScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5779251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x-min)/(max-min)"
    ]
   },
   {
