ClaimInvolvedCovers features extract

--- a/main.ipynb
+++ b/main.ipynb
@@ -67,7 +67,8 @@
     "# TODO train test validation\n",
     "# TODO check the roc curve\n",
     "# TODO hidden layer number\n",
-    "# TODO smote oversampling issue\n"
+    "# TODO smote oversampling issue\n",
+    "# TODO polcy times\n"
    ]
   },
   {
