add comment to the hyberpara we tried

--- a/main-update.ipynb
+++ b/main-update.ipynb
@@ -2162,13 +2162,43 @@
     "## Set the range of hyperparameters\n",
     "We are going to explore the performance of dinstinct neural network when training with different hyperparameters. And we are going to use the following hyperparameters:\n",
     "1. Learning rate:\n",
-    "    Usually, \n",
+    "    Usually, a lower learning rate will result in a better model and higher learning rate will accelerate the training process but result in a underfitting model. In this case, we set the range of learning rate from 10**(0.001) to 10**(0.1)\n",
+    "2. Optimizer:\n",
+    "    We are going to try both AdamOptimizer and sgd optimizer. In most case, SGD sacrifices the efficiency for better convergence quality.\n",
+    "3. Dropout:\n",
+    "    We are going to use HP_WHETHER_DROPOUT to decide whether to drop, and HP_DROPOUT to set the dropout rate. We set the range of dropout rate from 0.1 to 0.3 to see how the performance of the model changes.\n",
+    "4. Number of neurons in the hidden layer:\n",
+    "    In each hidden layer, we are going to use same number of neurons. In terms of the number of neurons, we are going to use a rule of thumb, in which we can calculate the number of neurons as:\n",
+    "    \n",
+    "    $N_h = \\frac{N_i}{\\alpha * (N_i+N_o))})$\n",
+    "    Ni = number of input neurons.\n",
+    "    No = number of output neurons.\n",
+    "    Ns = number of samples in training data set.\n",
+    "    α = an arbitrary scaling factor usually 2-10.\n",
+    "\n",
+    "    In our case, we are going to set $\\alpha$ ramdonly to 2,3,4\n",
+    "5. Number of hidden layers:\n",
+    "    Normally, if the model is very simple, one hidden layer is enough according to Reed's argument (Reed, 1999).\n",
+    "    ```\n",
+    "    Since a single sufficiently large hidden layer is adequate for approximation of most functions, why would anyone ever use more? One reason hangs on the words “sufficiently large”. Although a single hidden layer is optimal for some functions, there are others for which a single-hidden-layer-solution is very inefficient compared to solutions with more layers.\n",
+    "    ``` \n",
+    "\n",
+    "    However, in terms of a complex model, Bengio (2016) argued that \n",
+    "    ```\n",
+    "    Specifically, the universal approximation theorem states that a feedforward network with a linear output layer and at least one hidden layer with any “squashing” activation function (such as the logistic sigmoid activation function) can approximate any Borel measurable function from one finite-dimensional space to another with any desired non-zero amount of error, provided that the network is given enough hidden units.\n",
+    "    ——Deep learning, 2016\n",
+    "    ```\n",
+    "    Since our model might not be able to be explained by a linear function, we are going to set the range of hidden layers from 1 to 3.\n",
+    "6. Activation\n",
+    "    We are going to compare the performance of the following activation functions:\n",
+    "    1. sigmoid\n",
+    "    2. relu\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
