--- a/main.ipynb
+++ b/main.ipynb
@@ -4566,7 +4566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rm -rf ./logs/"
+    "# rm -rf ./logs/"
    ]
   },
   {
@@ -4741,33 +4741,33 @@
     }
    ],
    "source": [
-    "total_sessions = 3 #FIXME: change this to the number of sessions you want to run, and fix the issue in the metrics\n",
+    "# total_sessions = 3 #FIXME: change this to the number of sessions you want to run, and fix the issue in the metrics\n",
     "\n",
-    "for session in range(total_sessions):\n",
+    "# for session in range(total_sessions):\n",
     "    \n",
-    "    # Create hyperparameters randomly\n",
-    "    dropout_rate = HP_DROPOUT.domain.sample_uniform()\n",
-    "    num_units = HP_NUM_UNITS.domain.sample_uniform()\n",
-    "    optimizer = HP_OPTIMIZER.domain.sample_uniform()\n",
-    "    activation = HP_ACTIVATION.domain.sample_uniform()\n",
-    "    hidden_layer_number = HP_HIDDEN_LAYER_NUMBER.domain.sample_uniform()\n",
+    "#     # Create hyperparameters randomly\n",
+    "#     dropout_rate = HP_DROPOUT.domain.sample_uniform()\n",
+    "#     num_units = HP_NUM_UNITS.domain.sample_uniform()\n",
+    "#     optimizer = HP_OPTIMIZER.domain.sample_uniform()\n",
+    "#     activation = HP_ACTIVATION.domain.sample_uniform()\n",
+    "#     hidden_layer_number = HP_HIDDEN_LAYER_NUMBER.domain.sample_uniform()\n",
     "    \n",
-    "    r = -3*np.random.rand()\n",
-    "    learning_rate = 10.0**r\n",
+    "#     r = -3*np.random.rand()\n",
+    "#     learning_rate = 10.0**r\n",
     "    \n",
-    "    # Create a dictionary of hyperparameters\n",
-    "    hparams = { HP_LEARNING_RATE: learning_rate,\n",
-    "                HP_OPTIMIZER: optimizer,\n",
-    "                HP_DROPOUT: dropout_rate,\n",
-    "                HP_NUM_UNITS: num_units,\n",
-    "                HP_ACTIVATION: activation,\n",
-    "                HP_HIDDEN_LAYER_NUMBER: hidden_layer_number}\n",
+    "#     # Create a dictionary of hyperparameters\n",
+    "#     hparams = { HP_LEARNING_RATE: learning_rate,\n",
+    "#                 HP_OPTIMIZER: optimizer,\n",
+    "#                 HP_DROPOUT: dropout_rate,\n",
+    "#                 HP_NUM_UNITS: num_units,\n",
+    "#                 HP_ACTIVATION: activation,\n",
+    "#                 HP_HIDDEN_LAYER_NUMBER: hidden_layer_number}\n",
     "    \n",
-    "    # train the model with the chosen parameters\n",
-    "    run_name = \"run-%d\" % session\n",
-    "    print('--- Starting trial: %s' % run_name)\n",
-    "    print({h.name: hparams[h] for h in hparams})\n",
-    "    run('logs/hparam_tuning/' + run_name, hparams)"
+    "#     # train the model with the chosen parameters\n",
+    "#     run_name = \"run-%d\" % session\n",
+    "#     print('--- Starting trial: %s' % run_name)\n",
+    "#     print({h.name: hparams[h] for h in hparams})\n",
+    "#     run('logs/hparam_tuning/' + run_name, hparams)"
    ]
   },
   {
