clean some code

--- a/main-update-autoencoder.ipynb
+++ b/main-update-autoencoder.ipynb
@@ -23,31 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO missing data \n",
-    "# TODO draw the graph compare Fraud case\n",
-    "# TODO ANOVA\n",
-    "# check the range of all variables and drop unreasonable numbers\n",
-    "# split first and scale with smote code\n",
-    "# check scale first or smote first\n",
-    "# validation loss and trainning loss\n",
-    "# the batch size is 32\n",
-    "# TODO train test validation\n",
-    "# check the roc curve\n",
-    "# hidden layer number\n",
-    "# TODO smote oversampling issue(why the number is float)\n",
-    "# claim involved cover\n",
-    "# TODO clear session andv set seeds"
+    "# TODO clear session andv set seeds\n",
+    "# TODO reference\n",
+    "# TODO draw the roc curve\n",
+    "# TODO get some insight from tensorboard\n",
+    "# TODO: deal with outliers, or at the end to illustrate the lackness of the research"
    ]
   },
   {
@@ -55,9 +39,6 @@
    "metadata": {},
    "source": [
     "## Task 2\n",
-    "\n",
-    "### TODO    \n",
-    "calculate the number of policyholdersnumber and vehicle number\n",
     "\n",
     "### Question\n",
     "Load the dataset \"Insurance_claims.csv\" and clean it as appropriate for use with machine learning algorithms. A description of the features can be found at the end of this document.\n",
@@ -77,7 +58,7 @@
     "5. deal with date data\n",
     "6. get an insight of the distribution of dataset\n",
     "    - check whether there is a signicicant distribution difference in every column in fraud data and non-fraud data\n",
-    "    - TODO: plot categorical data\n",
+    "    - plot the distribution of every categorical variable\n",
     "7. clean features\n",
     "    - dummy\n",
     "      - PolicyholderOccupation\n",
@@ -281,7 +262,7 @@
     "\n",
     "# show the first 5 rows, get some idea of the data structure\n",
     "print(f'Data sample:')\n",
-    "print(df.head(5)) #TODO use sentiment analysis \n",
+    "print(df.head(5)) \n",
     "print('-----------------------------------------------------')\n",
     "\n",
     "# get the columns name\n",
@@ -874,9 +855,7 @@
     "## 2.7 Clean features\n",
     "1. deal with outliers \n",
     "    The presence of outliers in the data is a major problem for machine learning algorithms (Chakravarty, et al., 2020). \n",
-    "    TODO: deal with outliers, or at the end to illustrate the lackness of the research\n",
     "   \n",
-    "     \n",
     "2. dummy variables"
    ]
   },
@@ -2120,11 +2099,6 @@
    "metadata": {},
    "source": [
     "## Task 3\n",
-    "#### TODO:\n",
-    "1. record number of layer\n",
-    "2. set the threshold\n",
-    "\n",
-    "\n",
     "### Question\n",
     "Start by creating a (deep) neural network in TensorFlow and train it on the data. Using training and validation sets, find a model with high accuracy, then evaluate it on the test set. In particular, record both the accuracy and AUC. Briefly discuss what issues you observe based on the metrics.\n",
     "\n"
@@ -2413,7 +2387,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO draw the plot after resampling the data\n",
     "import imblearn\n",
     "from collections import Counter\n",
     "import matplotlib.pyplot as plt"
