--- a/main-update.ipynb
+++ b/main-update.ipynb
@@ -4,7 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1\n",
+    "#### Import Packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import datetime \n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import imblearn\n",
+    "from collections import Counter\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import tensorflow as tf\n",
+    "from tensorboard.plugins.hparams import api as hp\n",
+    "from sklearn.metrics import accuracy_score, f1_score, recall_score, precision_score,roc_auc_score,roc_curve\n",
+    "import statsmodels.api as sm\n",
+    "import keras_tuner as kt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 1\n",
     "### Question\n",
     "Briefly discuss why it is more difficult to find a good classifier on such a dataset than on one where, for example, 5,000 claims are fraudulent, and 5,000 are not. In particular, consider what happens when undetected fraudulent claims are very costly to the insurance company.\n",
     "\n",
@@ -51,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2\n",
+    "# Question 2\n",
     "\n",
     "### TODO    \n",
     "calculate the number of policyholdersnumber and vehicle number\n",
@@ -87,29 +119,6 @@
     "    - outlier # TODO\n",
     "8. split data and scale\n",
     "9.  show the data structure after preprocess\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import datetime \n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import imblearn\n",
-    "from collections import Counter\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "import tensorflow as tf\n",
-    "from tensorboard.plugins.hparams import api as hp\n",
-    "from sklearn.metrics import accuracy_score, f1_score, recall_score, precision_score,roc_auc_score,roc_curve\n",
     "\n"
    ]
   },
@@ -1625,7 +1634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 3\n",
+    "# Question 3\n",
     "#### TODO:\n",
     "1. record number of layer\n",
     "2. set the threshold\n",
@@ -4467,7 +4476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4\n",
+    "# Question 4\n",
     "### Question\n",
     "The file \"SMOTE.ipynb\" explains the process in detail and shows how to change the dataset with an example. You can copy and adjust the code to make it work within your analysis. You can adjust the \"sampling_strategy\" parameters as you see fit, particularly if\n",
     "you want to fine-tune your model in part 5.\n",
@@ -4574,7 +4583,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Undersampling\n",
     "We will successively try to undersample the minority class to 10%, 30%,50% of the size of majority class."
    ]
   },
@@ -4721,7 +4729,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 5\n",
+    "# Question 5\n",
     "### Question\n",
     " Create a new (deep) neural network and train it on your enhanced dataset. Use training and validation sets derived from the enhanced dataset to find a model with high accuracy. Evaluate your final model on a test set consisting only of original data. Again, record the accuracy and AUC. Briefly discuss the changes you would expect in the metrics and the actual changes you observe. Would you say that you are now doing better at identifying fraudulent claims?\n",
     "\n",
@@ -4742,9 +4750,7 @@
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import keras_tuner as kt"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5267,7 +5273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 6\n",
+    "# Question 6\n",
     "### Question\n",
     "Our second approach will be to use an autoencoder to learn what \"normal\" (non-fraudulent) data \"looks like.\"\n",
     "\n",
@@ -5439,12 +5445,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Question 6\n"
+    "# Question 7"
    ]
   },
   {
@@ -13519,7 +13523,7 @@
    ],
    "source": [
     "# linear regression #TODO more linear regression test\n",
-    "import statsmodels.api as sm\n",
+    "\n",
     "X  = np.array(df_performance_diff_sens['model_score'], dtype=float)\n",
     "y = np.array(df_performance_diff_sens['sensitivity'], dtype=float)\n",
     "X = sm.add_constant(X)\n",
@@ -13548,7 +13552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 8\n",
+    "# Question 8\n",
     "Based on the results of the previous question, we can use the model_score to select the best model."
    ]
   },
@@ -13897,7 +13901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Set the threshold for fraud\n",
+    "## Set the threshold for fraud\n",
     "We are going to use three method to set the threshold for fraud:\n",
     "1. Use the mean of the reconstruction error plus one standard deviation as the threshold\n",
     "2. Set the threshold to the minimum of the reconstruction error of fraud cases\n",
@@ -14014,7 +14018,7 @@
    ],
    "source": [
     "# show the distribution of the model_score\n",
-    "import seaborn as sns\n",
+    "\n",
     "sns.histplot(x=val_loss,y=y_val.flatten(),hue=y_val.flatten())"
    ]
   },
@@ -14185,7 +14189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
